--- a/assassin's-creed/mapas.html
+++ b/assassin's-creed/mapas.html
@@ -5,13 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapas de Assassin's Creed</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <a href="index.html">Home</a>
     </header>
     <main>
-        <h1>AC 1</h1>
+        <h1>Assassi's Creed 1</h1>
+        <h2>Em Assassi's Creed 1 o Protagonista viaja entre diversas localizações. Aqui estão os mapas das localizações que passamos pelo jogo.</h2>
+
+        <h2>Masyaf</h2>
+        <img src="imagens/masyaf.png" alt="Masyaf, quartel general dos Assassinos.">
+
+        <h2>Entre os reinos</h2>
+        <img src="imagens/kingdom.jpg" alt="Caminho para ir as cidades citadas a baixo.">
+
+        <h2>Jerusalém</h2>  
+        <img src="imagens/jerusalem.jpg" alt="Jerusalém, capital do estado de Israel.">
+
+        <h2>Acre</h2>
+        <img src="imagens/acre.jpg" alt="Acre, uma cidade de Israel.">
+
+        <h2>Damasco</h2>
+        <img src="imagens/damasco.jpg" alt="Damasco, capital da síria.">
+
         <h1>AC 2</h1>
     </main>
     <footer>
