criei uma tabela simples

--- a/assassin's-creed/index.html
+++ b/assassin's-creed/index.html
@@ -42,7 +42,20 @@
         <p>Lembro como se fosse ontem a primeira vez que joguei assassin's creed, fui para a casa do <abbr title="Meu primo é amigo de infância">Wesley</abbr> é lá ele me apresentou o AC1, o jogo era tão simples, mas me encantou de uma maneira incrível.</p>
         <p>Deis de muito novo eu sempre me interessei bastante por historia, é poder jogar um jogo com uma gameplay que me atraia tanto e ainda poder conhecer a historia do mundo de uma maneira diferente e divertida era incrível, claro que é apenas um jogo, então ele não e 100% fiel a historia, mas ver as Referências historicas usadas no jogo me passava é ainda passa um sentimento maravilhoso.</p>
 
-        
+        <h2>Minha lista de melhores Assassin's Creed</h2>
+        <p>Essa e apenas uma lista baseada na minha experiência com os jogos.</p>
+
+        <table>
+            <tr>
+                <td>Assassin's Creed: Brotherhood</td>
+                <td>Assassin's Creed: 3</td>
+                <td>Assassin's Creed: 4</td>
+                <td>Assassin's Creed: 2</td>
+                <td>Assassin's Creed: 1</td>
+                <td>Assassin's Creed: Revelations</td>
+                <td>Assassin's Creed: Odyssey</td>
+            </tr>
+        </table>
 
     </main>
     <footer>
